add_executable(test test.cc)
add_executable(test_scheduler test_scheduler.cc)
add_executable(test_fiber test_fiber.cc)
add_executable(test_thread test_thread.cc)
add_executable(test_socket test_socket.cc)
add_executable(test_iomanager test_iomanager.cc)

target_link_libraries(test sylar)
target_link_libraries(test_scheduler sylar)
target_link_libraries(test_fiber sylar)
target_link_libraries(test_thread sylar)
target_link_libraries(test_socket sylar)
target_link_libraries(test_iomanager sylar)